@21605788 wordpress plugin map display rev's - fixing a bug with a wordpress style messing with map display;  resizing listing grids dynamically if they are hidden by default on page load (setting of 'map_only' with show listing grid link); other css tweaks

--- a/css/wolfnet.less
+++ b/css/wolfnet.less
@@ -376,6 +376,71 @@
     &.wolfnet_propertyList,
 	&.wolfnet_resultsSummary
     {
+        .mqa-display img 
+        {
+            max-width:none !important;
+        }
+        .wolfnet_wntMainMap 
+        {
+            height:480px;
+            position:relative;
+        }
+        .wolfnet_wntHOItem 
+        {
+            cursor:pointer;
+            min-height:115px;
+            width:100%;
+        }
+        .wolfnet_wntHOTable 
+        {
+            padding:0px;
+            width:auto;
+        }
+        .wolfnet_wntHOImg 
+        {
+            position:relative;
+            top:0px;
+            left:0px;
+        }
+        .wolfnet_wntHOBroker 
+        {
+            position:relative;
+            width:110px;
+            margin-bottom:5px!important;
+            color:##888888;
+        }
+        .wolfnet_wntHOBrokerLogo 
+        {
+            max-width:100px;
+            height:auto;
+        }
+        .wolfnet_wntHOContentContainer 
+        {
+            position:relative;
+            min-width:200px;
+            line-height:1.2;
+            top: 0px;
+        }
+        .wolfnet_wntHOContentBold 
+        {
+            display:block;
+            white-space:nowrap;
+            font-weight:bold!important;
+        }
+        .wolfnet_wntHOContentBold 
+        {
+            display:block;
+            white-space:nowrap;
+        }
+        .wolfnet_wntHouseOverWrapper 
+        {
+            position:relative;
+            max-height:260px;
+            min-height:140px;
+            width:auto;
+            overflow-x:hidden;
+            overflow-y:auto;
+        }
         .showHideLink
         {
             padding-top: 25px;
@@ -799,64 +864,3 @@
     clear:both;
 }
 
-.wolfnet_wntMainMap 
-{
-	height:480px;
-	position:relative;
-}
-.wolfnet_wntHOItem 
-{
-    cursor:pointer;
-    min-height:115px;
-    width:100%;
-}
-.wolfnet_wntHOTable 
-{
-    padding:0px;
-    width:auto;
-}
-.wolfnet_wntHOImg 
-{
-    position:relative;
-    top:0px;
-    left:0px;
-}
-.wolfnet_wntHOBroker 
-{
-    position:relative;
-    width:110px;
-    margin-bottom:5px!important;
-    color:##888888;
-}
-.wolfnet_wntHOBrokerLogo 
-{
-    max-width:100px;
-    height:auto;
-}
-.wolfnet_wntHOContentContainer 
-{
-    position:relative;
-    min-width:200px;
-    line-height:1.2;
-    top: 0px;
-}
-.wolfnet_wntHOContentBold 
-{
-    display:block;
-    white-space:nowrap;
-    font-weight:bold!important;
-}
-.wolfnet_wntHOContentBold 
-{
-    display:block;
-    white-space:nowrap;
-}
-.wolfnet_wntHouseOverWrapper 
-{
-    position:relative;
-    max-height:260px;
-    min-height:140px;
-    width:auto;
-    overflow-x:hidden;
-    overflow-y:auto;
-}
